Migrate to Java 8 compatibility