@@ -9,18 +9,16 @@ import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 public class GitLabService {
 
     private final GitLabApi api;
-    private final String cacheKey;  // "host|token" for UserResolver
+    private final String cacheKey;
     private final String segment;
     private final String since;
     private final String until;
-
-    /** (done, total) — both numbers grow over time */
     private final BiConsumer<Integer, Integer> progressCallback;
-    /** Text phase label shown next to the numbers */
     private final Consumer<String> phaseCallback;
     private final UserResolver userResolver = new UserResolver();
 
@@ -43,19 +41,23 @@ public class GitLabService {
     public CompletableFuture<List<CommitDetail>> fetchProjects(List<Integer> projectIds) {
         List<CompletableFuture<List<CommitDetail>>> futures = projectIds.stream()
                 .map(this::fetchProject)
-                .toList();
+                .collect(Collectors.toList());
 
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                 .thenApply(v -> {
                     Map<String, CommitDetail> unique = new LinkedHashMap<>();
-                    futures.forEach(f -> f.join().forEach(c -> unique.put(c.id(), c)));
+                    for (CompletableFuture<List<CommitDetail>> f : futures) {
+                        for (CommitDetail c : f.join()) {
+                            unique.put(c.id(), c);
+                        }
+                    }
                     List<CommitDetail> result = new ArrayList<>(unique.values());
-                    result.sort(Comparator.comparing(CommitDetail::committedDate));
+                    Collections.sort(result, Comparator.comparing(CommitDetail::committedDate));
                     return result;
                 });
     }
 
-    private CompletableFuture<List<CommitDetail>> fetchProject(int projectId) {
+    private CompletableFuture<List<CommitDetail>> fetchProject(final int projectId) {
         return CompletableFuture.supplyAsync(() -> {
             try {
                 Project project = api.getProjectApi().getProject(projectId);
@@ -65,10 +67,10 @@ public class GitLabService {
                 Date sinceDate = Date.from(Instant.parse(since));
                 Date untilDate = Date.from(Instant.parse(until));
 
-                // ── Phase 1: direct commits ──────────────────────────────────────
+                // Phase 1: direct commits
                 phaseCallback.accept("[" + projectName + "] прямые коммиты...");
                 List<Commit> directCommits = commitsApi.getCommits(
-                        projectId, null, sinceDate, untilDate, null,
+                        (Object) projectId, null, sinceDate, untilDate, null,
                         Boolean.TRUE, Boolean.TRUE, Boolean.FALSE
                 );
                 total.addAndGet(directCommits.size());
@@ -80,31 +82,26 @@ public class GitLabService {
                     fireProgress();
                 }
 
-                // ── Phase 2: MR commits (parallel per MR) ───────────────────────
+                // Phase 2: MR commits
                 phaseCallback.accept("[" + projectName + "] MR-списки...");
                 List<MergeRequest> mrs = api.getMergeRequestApi()
                         .getMergeRequests(projectId, Constants.MergeRequestState.ALL, 1, 100);
 
-                // Each MR's commits are fetched in parallel; as soon as we know
-                // the SHAs from one MR we add them to total and launch detail requests.
                 List<CompletableFuture<Void>> allMrFutures = new ArrayList<>();
-
                 for (MergeRequest mr : mrs) {
+                    final long mrIid = mr.getIid();
                     allMrFutures.add(CompletableFuture.runAsync(() -> {
                         try {
                             List<Commit> mrCommits = api.getMergeRequestApi()
-                                    .getCommits(projectId, mr.getIid(), 1, 100);
-
-                            // Add this MR's commits to total immediately
+                                    .getCommits(projectId, mrIid, 1, 100);
                             total.addAndGet(mrCommits.size());
                             fireProgress();
 
-                            // Launch parallel detail requests for each SHA
                             List<CompletableFuture<Void>> detailFutures = mrCommits.stream()
-                                    .map(Commit::getId)
+                                    .map(c -> c.getId())
                                     .map(sha -> CompletableFuture.runAsync(() -> {
                                         try {
-                                            Commit detail = commitsApi.getCommit(projectId, sha);
+                                            Commit detail = commitsApi.getCommit((Object) projectId, sha);
                                             CommitDetail cd = toDetail(detail, segment, projectName);
                                             if (cd != null) unique.put(cd.id(), cd);
                                         } catch (Exception e) {
@@ -114,11 +111,10 @@ public class GitLabService {
                                             fireProgress();
                                         }
                                     }))
-                                    .toList();
-
+                                    .collect(Collectors.toList());
                             CompletableFuture.allOf(detailFutures.toArray(new CompletableFuture[0])).join();
                         } catch (Exception e) {
-                            System.err.println("Error fetching MR " + mr.getIid() + ": " + e.getMessage());
+                            System.err.println("Error fetching MR " + mrIid + ": " + e.getMessage());
                         }
                     }));
                 }
@@ -156,22 +152,12 @@ public class GitLabService {
             deletions = c.getStats().getDeletions() != null ? c.getStats().getDeletions() : 0;
         }
 
-        // Resolve email -> GitLab username (cached)
-        String username = userResolver.resolve(api, cacheKey, c.getAuthorName());
+        String username = userResolver.resolve(api, cacheKey, c.getAuthorEmail());
 
         return new CommitDetail(
                 c.getId(), dateStr, msg,
-                author(username),
+                username,
                 additions, deletions, segment, projectName);
-    }
-
-    private String author(String email) {
-        if (email.isBlank())
-            return email;
-        int pos = email.indexOf('@');
-        if (pos > -1)
-            email = email.substring(0, pos);
-        return email;
     }
 
     private boolean isTimeBound(String dateStr) {
